# HFC-2026-DataDoms

./: .env  .env.example  .gitignore  CITYLEARN_SETUP.md  CODEBASE_PLAN.md  DASHBOARD_AND_AGENTS_PLAN.md  ENERGY_TRANSFER_HISTORY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  SETUP_GUIDE.md  TELEMETRY_CURRENT_IMPLEMENTATION.md  architecture.json  pyproject.toml
.streamlit/: config.toml
tests/: __init__.py  conftest.py
tests/integration/: test_api_health.py
tests/unit/: test_bid_generator.py  test_carbon_calculator.py  test_order_book.py  test_rbc_agent.py
thermal_commons_mvp/: __init__.py
thermal_commons_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
thermal_commons_mvp/agents/: __init__.py  ai_decision_engine.py  base_agent.py  bid_generator.py  market_maker.py  rbc_agent.py
thermal_commons_mvp/api/: __init__.py  dependencies.py  main.py  middleware.py
thermal_commons_mvp/api/routes/: market.py  (+1 more)
thermal_commons_mvp/config/: __init__.py  constants.py  settings.py
thermal_commons_mvp/dashboard/: __init__.py  app.py  event_bus.py  simulation_engine.py  websocket_server.py
thermal_commons_mvp/interface/: __init__.py  bacnet_driver.py
thermal_commons_mvp/market/: __init__.py  order_book.py  trade_execution.py
thermal_commons_mvp/models/: __init__.py  bids.py  grid_signal.py  telemetry.py  trades.py
thermal_commons_mvp/persistence/: __init__.py  database.py
thermal_commons_mvp/simulation/: __init__.py  city_gym.py  grid_stress.py
thermal_commons_mvp/utils/: __init__.py  carbon_calculator.py  logging_utils.py
(+8 files in other folders)
